# nhc98

./: COPYRIGHT  INSTALL  Makefile  Makefile.inc  README  configure  nhc98.spec
src/libraries/: CabalParse2.hc  CabalParse2.hs  Makefile.cabal  Makefile.common  Makefile.inc  cabal-parse2.hc  cabal-parse2.hs  default-packages  nhc98-pkg.hc  nhc98-pkg.hs
src/libraries/Cabal/: Cabal.cabal  Parser.hs  darcsqwekn5  patch.versionranges  testParse.hs
src/libraries/Cabal/Distribution/PackageDescription/: Check.hs
src/libraries/HaXml/src/Text/XML/: HaXml.hc  HaXml.p.c  HaXml.z.c
src/libraries/HaXml/src/Text/XML/HaXml/: ByteStringPP.hc  ByteStringPP.p.c  ByteStringPP.z.c  Combinators.hc  Combinators.p.c  Combinators.z.c  Escape.hc  Escape.p.c  Escape.z.c  Lex.hc  Lex.p.c  Lex.z.c  Namespaces.hc  Namespaces.p.c  Namespaces.z.c  OneOfN.hc  OneOfN.p.c  OneOfN.z.c  Parse.hc  Parse.p.c  Parse.z.c  ParseLazy.hc  ParseLazy.p.c  ParseLazy.z.c  Posn.hc  Posn.p.c  Posn.z.c  Pretty.hc  Pretty.p.c  Pretty.z.c  SAX.hc  SAX.p.c  SAX.z.c  ShowXmlLazy.hc  ShowXmlLazy.p.c  (+22 more)
src/libraries/HaXml/src/tools/: flattenXMLtoCSV.hs
src/libraries/array/Data/: Array.z.c
src/libraries/base/: Foreign.p.c
src/libraries/base/Control/: Applicative.hc  Applicative.p.c  Applicative.z.c  Arrow.hc  Arrow.p.c  Arrow.z.c  Category.hc  Category.p.c  Category.z.c  Exception.hc  Exception.p.c  Exception.z.c  Monad.hc  Monad.p.c  Monad.z.c
src/libraries/base/Control/Exception/: Base.hc  Base.p.c  Base.z.c
src/libraries/base/Control/Monad/: Fix.hc  Fix.p.c  Fix.z.c  Instances.hc  Instances.p.c  Instances.z.c
src/libraries/base/Data/: Bits.hc  Bits.p.c  Bits.z.c  Bool.p.c  Char.hc  Char.p.c  Char.z.c  Complex.hc  Complex.p.c  Complex.z.c  Dynamic.hc  Dynamic.p.c  Dynamic.z.c  Either.hc  Either.p.c  Either.z.c  Eq.p.c  Fixed.hc  Fixed.p.c  Fixed.z.c  Foldable.hc  Foldable.p.c  Foldable.z.c  Function.hc  Function.p.c  Function.z.c  Functor.hc  Functor.p.c  Functor.z.c  HashTable.hc  HashTable.p.c  HashTable.z.c  IORef.hc  IORef.p.c  IORef.z.c  Int.p.c  Ix.p.c  List.hc  List.p.c  List.z.c  (+21 more)
src/libraries/base/Debug/: Trace.hc  Trace.p.c  Trace.z.c
src/libraries/base/Foreign/: C.p.c  ForeignPtr.hc  ForeignPtr.p.c  ForeignPtr.z.c  Marshal.z.c  Ptr.p.c  StablePtr.p.c  Storable.z.c
src/libraries/base/Foreign/C/: Error.hc  Error.p.c  Error.z.c  String.hc  String.p.c  String.z.c  Types.hc  Types.p.c  Types.z.c
src/libraries/base/Foreign/Marshal/: Alloc.hc  Alloc.p.c  Alloc.z.c  Array.hc  Array.p.c  Array.z.c  Error.hc  Error.p.c  Error.z.c  Pool.hc  Pool.p.c  Pool.z.c  Utils.hc  Utils.p.c  Utils.z.c
src/libraries/base/GHC/IO/: Device.hc  Device.p.c  Device.z.c
src/libraries/base/NHC/: PosixTypes.hc  PosixTypes.hs  PosixTypes.p.c  PosixTypes.z.c  SizedTypes.hc  SizedTypes.p.c  SizedTypes.z.c
src/libraries/base/System/: CPUTime.hc  CPUTime.hs  CPUTime.p.c  CPUTime.z.c  Environment.z.c  Exit.hc  Exit.p.c  Exit.z.c  IO.hc  IO.p.c  IO.z.c  Info.hc  Info.p.c  Info.z.c  Mem.z.c
src/libraries/base/System/Console/: GetOpt.hc  GetOpt.p.c  GetOpt.z.c
src/libraries/base/System/IO/: Error.hc  Error.p.c  Error.z.c  Unsafe.z.c
src/libraries/base/System/Posix/: Internals.hc  Internals.p.c  Internals.z.c  Types.z.c
src/libraries/base/Text/: Printf.hc  Printf.p.c  Printf.z.c  Read.z.c  Show.hc  Show.p.c  Show.z.c
src/libraries/base/Text/ParserCombinators/: ReadP.hc  ReadP.p.c  ReadP.z.c
src/libraries/base/Text/Show/: Functions.hc  Functions.p.c  Functions.z.c
src/libraries/base/Unsafe/: Coerce.z.c
src/libraries/bytestring/Data/: ByteString.hc  ByteString.hs  ByteString.p.c  ByteString.z.c
src/libraries/bytestring/Data/ByteString/: Char8.hc  Char8.p.c  Char8.z.c  Fusion.z.c  Internal.hc  Internal.p.c  Internal.z.c  Lazy.hc  Lazy.p.c  Lazy.z.c  Unsafe.hc  Unsafe.p.c  Unsafe.z.c
src/libraries/bytestring/Data/ByteString/Lazy/: Char8.hc  Char8.p.c  Char8.z.c  Internal.hc  Internal.p.c  Internal.z.c
src/libraries/containers/Data/: IntMap.hc  IntMap.p.c  IntMap.z.c  IntSet.hc  IntSet.p.c  IntSet.z.c  Map.hc  Map.p.c  Map.z.c  Set.hc  Set.p.c  Set.z.c
src/libraries/directory/System/: Directory.hc  Directory.p.c  Directory.z.c
src/libraries/filepath/System/: FilePath.z.c
src/libraries/filepath/System/FilePath/: Posix.hc  Posix.p.c  Posix.z.c  Windows.hc  Windows.p.c  Windows.z.c
src/libraries/haskell98/: haskell98.cabal
src/libraries/old-locale/System/: Locale.hc  Locale.p.c  Locale.z.c
src/libraries/old-time/System/: Time.hc  Time.hs  Time.p.c  Time.z.c
src/libraries/packedstring/: packedstring.cabal
src/libraries/packedstring/Data/: PackedString.hc  PackedString.hs  PackedString.p.c  PackedString.z.c
src/libraries/polyparse/: Build.bat  COPYRIGHT  Lex.hs  Makefile  README  configure  polyparse.cabal  preproc
src/libraries/polyparse/docs/: changelog.html  index.html
src/libraries/polyparse/src/: Makefile  Makefile.nhc98  pkg.conf
src/libraries/polyparse/src/Text/: Parse.hc  Parse.hs  Parse.p.c  Parse.z.c
src/libraries/polyparse/src/Text/Parse/: ByteString.hs
src/libraries/polyparse/src/Text/ParserCombinators/: HuttonMeijer.p.c  HuttonMeijer.z.c  HuttonMeijerWallace.hc  HuttonMeijerWallace.hs  HuttonMeijerWallace.p.c  HuttonMeijerWallace.z.c  Poly.hs  Poly.p.c
src/libraries/pretty/Text/: PrettyPrint.z.c
src/libraries/pretty/Text/PrettyPrint/: HughesPJ.hc  HughesPJ.p.c  HughesPJ.z.c
src/libraries/process/System/: Cmd.hc  Cmd.p.c  Cmd.z.c
src/libraries/random/System/: Random.hc  Random.p.c  Random.z.c
(+4154 files in other folders)
