name:       packedstring
version:    0.1.0.1
cabal-version: >= 1.6
license:    BSD3
license-file:    LICENSE
maintainer:    malcolm@haskell.org
synopsis:    (Deprecated) Packed Strings.
description:
    (Deprecated) Packed Strings.
build-type: Simple

source-repository head
    type:     darcs
    location: http://www.cs.york.ac.uk/fp/darcs/packedstring/

Library
  build-depends: base >= 4, array
  exposed-modules:
      Data.PackedString
  extensions: CPP

